[tool.poetry]
name = "wartracker"
version = "0.1.0"
description = "Track your Clash Royale war statistics"
authors = ["jykntr <jykntr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pendulum = "^2.0"
pymongo = "^3.7"
click = "^6.7"
"discord.py" = "^1.1"
apscheduler = "^3.5"
clashroyale = "^4.0"
yaspin = "^0.14.0"
requests = "^2.21"

[tool.poetry.dev-dependencies]
flake8 = "*"
pytest = "*"
black = "18.6b4"

[tool.poetry.scripts]
wartracker = 'wartracker.cli:main'
emojigen = 'emojigen.cli:main'
webrefresher = 'royaleapiweb.cli:main'

[tool.black]
line-length = 88
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
